--- a/style.css
+++ b/style.css
@@ -1,11 +1,7 @@
-body {
-  margin: 0;
-  padding:0px;
-  /* background: black;
-  color:green;
-  text-align: center; */
- }
-canvas {
-  display: block;
-  /* margin: auto; */
+html, body {
+    margin: 0;
+    padding: 0;
+  }
+canvas{
+    display: block;
 }
